Modelo de necesidades: * Se plantea modelo de necesidades * Se crea función Insert * Se crea función GetAll * Se crea servicio POST para insertar * Se crea servicio GET para GetAll * Se agregan las rutas para necesidades
issue #79
